Change Page extends RowBlock